@@ -5,3 +5,4 @@ Heiko Strathmann <heiko.strathmann@gmail.com>
 Shashwat Lal Das <fraggerx@gmail.com>
 Sebastian Henschel <shogun@kodeaffe.de>
 Christian Widmer <cwidmer@tuebingen.mpg.de>
+Viktor Gal <vigsterkr@gmail.com>
