@@ -1,11 +1,13 @@
 include(CommonModularInterface)
 include_directories(${CMAKE_SOURCE_DIR}/src)
-INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${LUA_INCLUDEDIR})
 
-GENERATE_MODULAR_TARGET(lua ${CMAKE_CURRENT_SOURCE_DIR} ${LUA_LIBRARIES})
+GENERATE_MODULAR_TARGET(lua ${CMAKE_CURRENT_SOURCE_DIR} ${LUA_LDFLAGS})
+
+STRING(REGEX REPLACE "([0-9]*.[0-9]*).[0-9]*" "lib/lua/\\1" LUA_EXTENSION_DIR ${LUA_VERSION})
 
 INSTALL(TARGETS lua_modular
-	LIBRARY DESTINATION lib/lua/
+	LIBRARY DESTINATION ${LUA_EXTENSION_DIR}
 	COMPONENT lua)
 
 set(CPACK_COMPONENT_LUA_DISPLAY_NAME "Lua interface" PARENT_SCOPE)
